--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,13 @@ __pycache__/
 env/
 
 # Django
-db.sqlite3
+# db.sqlite3
 *.log
 *.pot
 *.pyc
 *.pyo
 *.pyd
-*.sqlite3
+# *.sqlite3
 /staticfiles/
 
 # VSCode
